# Notion-Telegram-Revision

./: .gitignore  CLAUDE.md  README.md  bot.py  pyproject.toml  test_bot.py
.github/workflows/: study_guide.yml
